# simple_cv_generator

./: .gitignore  .html  Cargo.toml  README.md  me.html  me.toml
src/: args.rs  main.rs
src/models/: base.rs  basic.rs  career_craft.rs  mod.rs  xross.rs
src/utils/: log_link.rs  mod.rs  save.rs  template.rs
templates/: base.html  basic.html  xross.example.toml  xross.html
templates/basic/: basic.html  basic_example.toml
templates/careerCraft/: career-craft.html  career_craft_example.toml
templates/xross/: xross.html  xross_example.toml
