[package]
name = "cv-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
tera = "1.19.0"
toml = "0.7.5"
